K8s/shared-environment/infrastructure/flask-pod.yaml
apiVersion: v1
kind: Pod
metadata:
 name: flask-pod
 labels:
    app: flask-pod
spec:
 containers:
    - name: flask-container
      image: <aws-account-id>.dkr.ecr.<aws-region>.amazonaws.com/ecr:latest
      ports:
        - containerPort: 5002
