K8s/shared-environment/infrastructure/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: flask-service
spec:
 selector:
    app: flask-pod
 ports:
   - protocol: TCP
     port: 80
     targetPort: 5002
