K8s/shared-environment/infrastructure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: ""
      http:
        paths:
          - path: /github
            pathType: Prefix
            backend:
              service:
                name: flask-service
                port:
                  number: 80
